<resources>
    <string name="app_name">WeatherApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="Alerts">Alerts</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>


    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>


    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="Settings">Settings</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="_12pm">12pm</string>
    <string name="_13_c">13 C</string>
    <string name="clear_sky">Clear Sky</string>
    <string name="_1021_hpa">1021 hpa</string>
    <string name="pressure">Pressure</string>
    <string name="cloud">cloud</string>
    <string name="humidity">Humidity</string>
    <string name="_2_06_m_s">2.06 m/s</string>
    <string name="visibility">visibility</string>
    <string name="ultra">ultra</string>
    <string name="api_key" translatable="false">AIzaSyAbuHdF1hB_ddtCtgEZ7iE3cDqXk4zpVJU</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="no_internet_txt">There is no  Internet Connection!</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="mile_hour">Mile / Hour</string>
    <string name="meter_sec">Meter / Sec</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="map">Map</string>
    <string name="change_to_en_txt">You changed Language to English</string>
    <string name="change_to_ar_txt">You changed Language to Arabic</string>
    <string name="gps">GPS</string>
    <string name="Current_Weather">Current Weather</string>
    <string name="mansoura">Mansoura</string>
    <string name="alerts">Alerts</string>
    <string name="location">Location</string>
    <string name="notification">Notification</string>
    <string name="temperature">Temperature</string>
    <string name="change_to_cel_txt">You changed Temperature to Celsius</string>
    <string name="change_to_kelvin_txt">You changed Temperature to Kelvin</string>
    <string name="change_to_feh_txt">You changed Temperature to Fahrenheit</string>
    <string name="change_to_gps_txt">You changed Location to GPS</string>
    <string name="change_to_map_txt">You changed Location to Map</string>
    <string name="visibility_tv">Visibility</string>
    <string name="violate">Violate</string>
    <string name="measure">Measure</string>
    <string name="wind">Wind</string>
    <string name="humidity_tv">Humidity</string>
    <string name="map_try" translatable="false">Try Again</string>
    <string name="settingMap">Map</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="date">Date</string>
    <string name="zone">Zone</string>
    <string name="egypt">Egypt</string>
    <string name="save">Save</string>
    <string name="date_from">Date From</string>
    <string name="channel_name">"Weather App Notification "</string>
    <string name="channel_description">Alert Notification</string>
    <string name="map_name">Map</string>
    <string name="choose">Choose time</string>
    <string name="Choose_date">Choose date</string>
    <string name="Enter_Data_In_Empty_Field">Enter Data In Empty Field</string>
    <string name="Warning">Warning</string>
    <string name="Do_You">Do You want to delete this item  from favorite</string>
    <string name="Delete">Delete</string>
    <string name="Item">Item has been Deleted</string>
    <string name="error">error</string>
    <string name="Saved">Saved</string>
    <string name="Favorite">Favorite</string>
    <string name="Save">Save</string>
    <string name="Data">Data has been saved</string>
    <string name="ok">Ok</string>
</resources>