<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/baseline_favorite_24"
            android:title="@string/favorite" />
        <item
            android:id="@+id/nav_alerts"
            android:icon="@drawable/baseline_notifications_24"
            android:title="@string/alerts" />
        <item
            android:id="@+id/nav_Settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/settings" />

    </group>
</menu>