<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.weatherapp.ui.home.view.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.example.weatherapp.ui.favorite.view.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/favorite_fragment" >
        <action
            android:id="@+id/action_nav_favorite_to_mapsFragment"
            app:destination="@id/Nav_map" />
        <action
            android:id="@+id/action_nav_favorite_to_favoritePlacesDetailsFragment"
            app:destination="@id/favoritePlacesDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_alerts"
        android:name="com.example.weatherapp.ui.alert.view.AlertsFragment"
        android:label="@string/Alerts"
        tools:layout="@layout/alert_fragment" />
    <fragment
        android:id="@+id/nav_Settings"
        android:name="com.example.weatherapp.ui.settings.view.SettingsFragment"
        android:label="@string/Settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_nav_Settings_to_nav_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/mobile_navigation" />
        <action
            android:id="@+id/action_nav_Settings_to_settingMapFragment"
            app:destination="@id/settingMapFragment" />
    </fragment>
    <fragment
        android:id="@+id/Nav_map"
        android:name="com.example.weatherapp.ui.favorite.view.MapsFragment"
        android:label="Map"
        tools:layout="@layout/fragment_maps" />
    <fragment
        android:id="@+id/favoritePlacesDetailsFragment"
        android:name="com.example.weatherapp.ui.favorite.view.FavoritePlacesDetailsFragment"
        android:label="@string/Current_Weather" >
        <argument
            android:name="FavoritePlacesSerializable"
            app:argType="com.example.weatherapp.models.FavoriteWeatherPlacesModel" />
    </fragment>
    <fragment
        android:id="@+id/settingMapFragment"
        android:name="com.example.weatherapp.ui.settings.view.SettingMapFragment"
        android:label="@string/settingMap" >
        <action
            android:id="@+id/action_settingMapFragment_to_nav_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/nav_home" />
    </fragment>

</navigation>